editing emoji faces to be bigger

--- a/index.html
+++ b/index.html
@@ -55,11 +55,26 @@
       <div class="right square">
         <fieldset id="emojiContainer">
           <legend>Select your current mood</legend>
-          <button class="emoji" data-feeling="happy">&#128522;</button>
-          <button class="emoji" data-feeling="sad">&#128546;</button>
-          <button class="emoji" data-feeling="angry">&#128544;</button>
-          <button class="emoji" data-feeling="sleepy">&#128564;</button>
-          <button class="emoji" data-feeling="sick">&#129298;</button>
+          <button class="emoji" data-feeling="happy">
+            <span class="emoji-face">&#128522;</span>
+            <span class="emoji-label">Happy</span>
+          </button>
+          <button class="emoji" data-feeling="sad">
+            <span class="emoji-face">&#128546;</span>
+            <span class="emoji-label">Sad</span>
+          </button>
+          <button class="emoji" data-feeling="angry">
+            <span class="emoji-face">&#128544;</span>
+            <span class="emoji-label">Angry</span>
+          </button>
+          <button class="emoji" data-feeling="sleepy">
+            <span class="emoji-face">&#128564;</span>
+            <span class="emoji-label">Sleepy</span>
+          </button>
+          <button class="emoji" data-feeling="sick">
+            <span class="emoji-face">&#129298;</span>
+            <span class="emoji-label">Sick</span>
+          </button>
         </fieldset>
         <div id="emojiResults">No data yet</div>
       </div>
