🔥 CSS Cleanup: Fixed background override issues, silenced SonarLint, and made dark mode cute again

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       </h1>
       <div class="toggle-container">
         <input type="checkbox" id="modeToggle" aria-label="Toggle dark mode" />
-        <label class="switch" for="modeToggle"
-          ><span class="slider"></span
-        ></label>
+        <label class="switch" for="modeToggle">
+          <span class="slider"></span>
+        </label>
       </div>
     </header>
 
@@ -127,15 +127,19 @@
     </section>
 
     <!-- Section 4: What’s on YOUR mind sis? -->
-    <section class="card" id="whats-on-your-mind">
+    <section class="anonymous-message-section">
       <h2>What’s on YOUR mind sis?</h2>
-      <p>Your words are safe here. This is private, just for your peace.</p>
+      <p>
+        Share what’s on your heart. No names. No pressure. Just a safe space.
+      </p>
       <iframe
-        src="https://forms.gle/D3Knh1qsujpKj7pa6"
-        title="Anonymous message form"
+        src="https://docs.google.com/forms/d/e/1FAIpQLScL0wsUTedam8swd6hlEUx47feOL0-eCFW-nL1ZYJWB2eruoA/viewform?embedded=true"
         class="anon-form"
-        loading="lazy"
-      ></iframe>
+        title="Anonymous Message Form"
+        allowfullscreen
+      >
+        Loading…
+      </iframe>
     </section>
 
     <script src="script.js"></script>
